tests/invalid/subscript_non_subscriptable/main.py
def run_case() -> None:
    x: int = 5

    y: int = x[0]

if __name__ == "__main__":
    run_case()
